--- a/Css/style.css
+++ b/Css/style.css
@@ -218,6 +218,7 @@ a
     text-transform: capitalize;
     padding-top: 20px;
     padding-bottom: 20px;
+    box-shadow: 1px 2px 13px 15px #5551516e;
 }
 .content-about i 
 {
@@ -248,7 +249,7 @@ a
     left:0;
     right:0;
     width: 0px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background: -webkit-linear-gradient(bottom left ,rgba(189, 190, 189, 0.6),rgba(36, 37, 37, 0.6));
     z-index: -9;
     transition: ease width 0.6s;
 }
@@ -394,7 +395,7 @@ a
     content: "";
     position: absolute;
     z-index: -2;
-    background-color: rgba(45, 44, 48, 0.7);
+    background:-webkit-linear-gradient(top left, rgba(219, 207, 207, 0.671),rgba(255, 231, 108, 0.815));
     width: 0;
     top: 0;
     right: 0;
@@ -478,11 +479,7 @@ a
     color: white;
     text-transform: capitalize;
 }
-/* ^price SECTION */
-.price
-{
-
-} 
+/* ^price SECTION */ 
 .price-content 
 {
     width: 30%;
@@ -687,6 +684,7 @@ a
     width: 30%;
     background-color: white;
     float: left;
+    box-shadow: -1px 2px 14px 7px #6381ad80;
 }
 .news-img
 {
@@ -727,10 +725,6 @@ a
     color: #bebebefb;
 }
 /* contact SECTION */ 
-.contact-icon 
-{
-
-}
 .contact-icon i 
 {
     color: #6195ff;
@@ -789,6 +783,9 @@ input[type="subject"],input[type="text"]
 input[type="text"]
 {
     height: 70px;
+    -webkit-resize: both;
+    resize: both;
+    overflow: hidden;
 }
 .subject
 {
